2016-09-16  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Remove support for OTP over TCP sockets.

	* src/comm.c (is_client_present), src/hosts.c (hosts_read_client),
	src/ntp.c (ntp_read_prefs): Remove handling of otp over tcp.

	* src/openvassd.c (loading_client_handle, loading_handler_start)
	(scanner_thread, main_loop): Remove handling of otp over tcp.
	(init_ssl_ctx, init_network): Remove function.
	(main): Remove --listen --port --gnutls-priorities and --dh-params
	cli parameters.

	* doc/openvassd.8.in: Update documentation.

2016-09-09  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/hosts.c (forward): Don't end sending loop when nsend() returns 0.

2016-09-05  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (launch_plugin), src/pluginlaunch.c
	(update_running_processes): Log plugin name alongside of the oid.

2016-08-31  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/ntp.c: Remove unneeded includes.

2016-08-29  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/attack.c: Removed an unneeded include.

2016-08-23  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* CMakeLists.txt, src/CMakeLists.txt, tools/greenbone-nvt-sync.in
	(OPENVAS_PID_DIR): Rename to OPENVAS_RUN_DIR.

	* src/openvassd.c (main): Default to listening on
	OPENVAS_PID_DIR/openvassd.sock unix socket.

2016-08-22  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (init_unix_network): Set the default socket file mode
	to 660.

2016-08-22  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (main): Add --listen-mode option.
	(init_unix_network): Add parameter for socket file mode.

2016-08-22  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (main): Add --listen-group option.
	(init_unix_network): Add parameter for socket group.

2016-08-19  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (main): Add --listen-owner option.